--- a/.github/workflows/java-gradle_starter_pipeline.yml
+++ b/.github/workflows/java-gradle_starter_pipeline.yml
@@ -1,6 +1,6 @@
 name: Starter Pipeline for Java Gradle Project using Github Packages
 
-on: pull_request
+on: push
   #push:
     #branches: [ main ]
 
