--- a/.github/workflows/java-maven_starter_pipeline.yml
+++ b/.github/workflows/java-maven_starter_pipeline.yml
@@ -71,7 +71,7 @@ jobs:
 
   Build_Test_and_Deploy_Package:
     runs-on: ubuntu-latest
-    enviornment: Non-prod
+    environment: Non-prod
     needs: [pre-work-setup]
     steps:
     - name: ============ Checkout the repository Code ==========
@@ -137,7 +137,7 @@ jobs:
   Code_Quality_Scan:
     runs-on: ubuntu-latest #need to use self hosted runner for sonarqube.
     needs: Build_Test_and_Deploy_Package
-    enviornment: Non-prod
+    environment: Non-prod
     continue-on-error: true
     steps:
     - name: ============ Checkout the repository Code ========== same as git-repo (get)
@@ -203,7 +203,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [ pre-work-setup, Build_Test_and_Deploy_Package ]
     continue-on-error: true
-    enviornment: Non-prod
+    environment: Non-prod
     steps:
     - uses: actions/checkout@v1\
       with:
@@ -264,9 +264,9 @@ jobs:
           # Flag to verify if this is helm deployment
           is_helm_deployment: true
  # Deployment environment name. Supported values: dev/release/prod 
-          environment: ${{env.enviornment}}
+          environment: ${{env.environment}}
             # Release name of the helm application
-          application_release_name: ${{env.APPLICATION_NAME}}-${{env.enviornment}}
+          application_release_name: ${{env.APPLICATION_NAME}}-${{env.environment}}
             # Kubeconfig for AKS cluster connection, should be created as GitHub secret
           kube_config: ${{ secrets.KUBE_CONFIG }}            
 # provide relative path,Name of the values file to use to help helm chart folder
