--- a/.github/workflows/npm_build_starter_pipeline.yml
+++ b/.github/workflows/npm_build_starter_pipeline.yml
@@ -1,5 +1,5 @@
 name: CICD-NODE-WEBAPP Deployment Starter Pipeline
-on: pull_request
+on: push
 
 # #####  Please Make sure you have the secrets setup in ################
 
