--- a/.github/workflows/java-gradle_starter_pipeline.yml
+++ b/.github/workflows/java-gradle_starter_pipeline.yml
@@ -43,7 +43,7 @@ on: push
 env:
   # CI CD PARAMETERS
   APPLICATION_NAME: java-gradlestarter
-  enviornment: dev
+  environment: dev
   SONAR_CLOUD_URL: https://sonarcloud.io
   GH_REGISTRY: ghcr.io/${{github.repository}} 
   CONTAINER_IMAGE_NAME: java-gradlestarter-webapp-sample
@@ -153,10 +153,10 @@ jobs:
         build_tool: gradle
         build_file_name: gradlew
         build_file_path: . 
-        cq_host_url: ${{env.SONAR_CLOUD_URL_JAVA }}
+        cq_host_url: ${{env.SONAR_CLOUD_URL }}
         cq_project_name: ${{ secrets.SONAR_PROJECT_NAME_JAVA }} 
         cq_project_key: ${{ secrets.SONAR_PROJECT_KEY_JAVA }} 
-        cq_token: ${{ secrets.SONAR_TOKEN }} 
+        cq_token: ${{ secrets.SONAR_TOKEN_JAVA }} 
         cq_scan_arguments: -Dsonar.organization=digitalinnovation 
           
         
