--- a/.github/workflows/java-maven_starter_pipeline.yml
+++ b/.github/workflows/java-maven_starter_pipeline.yml
@@ -1,5 +1,13 @@
 name: Starter Pipeline for Java Maven Project using Github Packages
-on: pull_request
+on: 
+ pull_request:
+    branches: [ testing-pipeline ]
+    types: [assigned, opened, synchronize, reopened]
+    paths-ignore:
+      - docs/**
+      - "**.md"
+      - mkdocs.yml
+      - catalog-info.yaml
   #push:
     #branches: [ main ]
   
